tests/ui/traits/next-solver/more-object-bound.stderr
error[E0271]: type mismatch resolving `A == B`
  --> $DIR/more-object-bound.rs:12:5
   |
LL |     foo::<A, B, dyn Trait<A = A, B = B>>(x)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ
   |
   = note: required because it appears within the type `dyn Trait<A = A, B = B>`
note: required by a bound in `foo`
  --> $DIR/more-object-bound.rs:18:8
   |
LL | fn foo<A, B, T: ?Sized>(x: T::A) -> B
   |    --- required by a bound in this function
LL | where
LL |     T: Trait<B = B>,
   |        ^^^^^^^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
